[package]
name = "comrak-wasm"
version = "0.1.0"
authors = ["Luca Casonato <hello@lcas.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
comrak = "0.11.0"
js-sys = "0.3.51"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }

[profile.release]
lto = true
opt-level = 3