[package]
name = "comrak-wasm"
version = "0.1.1"
authors = ["Luca Casonato <hello@lcas.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
comrak = { version = "0.11.0", default-features = false }
js-sys = "0.3.51"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wee_alloc = "0.4.5"

[profile.release]
lto = true
opt-level = "z"
